--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon" href="https://weblearnbd.net/tphtml/shofy-prv/shofy/assets/img/logo/favicon.png"
-    type="image/x-icon">
+  <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vue Shop</title>
+  <title>To-Do Application</title>
+  
 </head>
 
 <body>
